HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementDiagnosticsTable/Source/Main.uv
//! Rejected refinement specimen for the refinement diagnostic table surface.

public procedure refinementDiagnosticsTable(value: i32 |: { self < 10 }) -> i32 {
    return value
}
